[package]
name = "bililive-bullet"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"
authors = ["LJason <ljason@ljason.cn>"]

repository = "https://github.com/LJason77/bililive-bullet"
license-file = "LICENSE"
readme = "README.md"
publish = false

[profile.release]
strip = "symbols"
codegen-units = 1
lto = "fat"
panic = "abort"

[dependencies]
eframe = "0.23"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]
